--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
 
-    <a href="http://">Assista ao trailer</a>
+    <a href="https://www.youtube.com/watch?v=dJCzDucuMOY">Assista ao trailer</a>
 
 </body>
 </html>
